avoid graph moving too much

--- a/src/App.css
+++ b/src/App.css
@@ -316,14 +316,14 @@
   color: rgb(0, 0, 0);
   cursor: pointer;
   font-size: 16px;
-  height: 100%;
+  height: 150%;
   outline: none;
   width: 300%;
-  margin-left: 150%;
+  margin-left: 100%;
   display: inline-block;
   padding: 6px; 
   text-align: center; 
-  font-size: 17px;
+  font-size: 20px;
   font-weight: bold;
   font-family: 'Noticia Text', serif;
 }
